--- a/app/views/cpanel/replies/_form.html.erb
+++ b/app/views/cpanel/replies/_form.html.erb
@@ -4,6 +4,7 @@
     <legend></legend>
     <%= f.input :body, as: :text, input_html: { class: "span8", rows: "10"} %>
     <%= f.input :user_id %>
+    <%= f.input :parent_id %>
     <div class="form-actions">
       <%= f.submit t("common.save"), class: "btn btn-primary", 'data-disable-with' => t("common.saving") %>
       or
