--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,12 +92,29 @@
     ga('send', 'pageview');
   </script>
   <div class="zoom-overlay"></div>
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <script>
+  window.MathJax = {
+  loader: {
+    source: {
+      '[tex]/amsCd': '[tex]/amscd'
+    },
+    load: ['[tex]/boldsymbol', '[tex]/amsCd']
+  },
+  tex: {
+    tags: 'ams',
+    inlineMath: [['$','$'], ['\\(','\\)']],
+    processEscapes: true,
+    processEnvironments: true,
+    packages: {
+      '[+]': ['boldsymbol'],
+    },
+  }
+};
+</script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.2/es5/tex-mml-svg.min async></script>
   <script type="text/x-mathjax-config">
-    MathJax.Hub.Config({ tex2jax: {inlineMath: [['$','$']]} });
     $(document).on("turbolinks:load", function() {
       MathJax.Hub.Queue(["Typeset", MathJax.Hub]);
-
       watchNode("#replies .items");
       $(".editor-toolbar a.preview").one("click", function() {
         watchNode("#preview");
