--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -111,7 +111,7 @@
   }
 };
 </script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.2/es5/tex-mml-svg.min.js async></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.2/es5/tex-mml-chtml.min.js" async></script>
   <script type="text/x-mathjax-config">
     $(document).on("turbolinks:load", function() {
       MathJax.Hub.Queue(["Typeset", MathJax.Hub]);
