--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,27 +92,10 @@
     ga('send', 'pageview');
   </script>
   <div class="zoom-overlay"></div>
-  <script>
-  window.MathJax = {
-  loader: {
-    source: {
-      '[tex]/amsCd': '[tex]/amscd'
-    },
-    load: ['[tex]/boldsymbol', '[tex]/amsCd']
-  },
-  tex: {
-    tags: 'ams',
-    inlineMath: [['$','$'], ['\\(','\\)']],
-    processEscapes: true,
-    processEnvironments: true,
-    packages: {
-      '[+]': ['boldsymbol'],
-    },
-  }
-};
-</script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.2/es5/tex-mml-chtml.min.js" async></script>
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML" async></script>
   <script type="text/x-mathjax-config">
+  MathJax.Hub.Config({ tex2jax: {inlineMath: [['$','$']]} });
     $(document).on("turbolinks:load", function() {
       MathJax.Hub.Queue(["Typeset", MathJax.Hub]);
       watchNode("#replies .items");
